@@ -169,6 +169,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1600860: Search for shared python library in LIBDIR, not lib/python/config,
+  on "linux" and "gnu" systems.
+
 - Bug #1124861: Automatically create pipes if GetStdHandle fails in
   subprocess. 
 
